# Canvas_CLI

./: .env.example  .gitignore  Cargo.toml  README.md  temp.json  upload_data.json
src/: api_calls.rs  config.rs  data.rs  help.rs  lib.rs  main.rs  temp.json
